# Sudoku

./: .flake8  .gitignore  CONTRIBUTING.md  DEVELOPMENT.md  README.md  io.github.sepehr_rs.GSudoku.Devel.json  io.github.sepehr_rs.GSudoku.json  io.github.sepehr_rs.LibreSudoku.Devel.json  io.github.sepehr_rs.LibreSudoku.json  io.github.sepehr_rs.Sudoku.Devel.json  io.github.sepehr_rs.Sudoku.json  meson.build  pyrightconfig.json  python3-requirements.json  requirements.txt  sudoku.doap  sudoku.doapp
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
data/: io.github.sepehr_rs.GSudoku.appdata.xml.in  io.github.sepehr_rs.GSudoku.desktop.in  io.github.sepehr_rs.GSudoku.gschema.xml  io.github.sepehr_rs.LibreSudoku.appdata.xml.in  io.github.sepehr_rs.LibreSudoku.desktop.in  io.github.sepehr_rs.LibreSudoku.gschema.xml  io.github.sepehr_rs.LibreSudoku.metainfo.xml.in  io.github.sepehr_rs.Sudoku.appdata.xml.in  io.github.sepehr_rs.Sudoku.desktop.in  io.github.sepehr_rs.Sudoku.gschema.xml  io.github.sepehr_rs.Sudoku.metainfo.xml.in  meson.build  style-dark.css  style.css  sudokugame.gresource.xml.in
data/blueprints/: finished-page.blp  game-over-page.blp  help-overlay.blp  how-to-play-dialog.blp  loading-screen.blp  meson.build  shortcuts-dialog.blp  shortcuts-overlay.blp  shortcuts_dialog.blp  window.blp
data/icons/: meson.build
docs/superpowers/plans/: 2026-04-19-mistake-counter-preferences-and-game-over.md
docs/superpowers/specs/: 2026-04-19-mistake-counter-preferences-and-game-over-design.md
po/: LINGUAS  POTFILES  de.po  fa.po  meson.build  nl.po  sudokugame.pot  vi.po  zh.po
scripts/: update-po.sh
sources/: py_sudoku-2.0.0-py3-none-any.whl
src/: application.py  dark.css  difficulty_selection_dialog.py  finished_overlay.py  finished_page.py  game_board.py  game_manager.py  game_window.ui  gsudoku.gresource.xml  gsudoku.in  help_dialog.py  libresudoku.gresource  libresudoku.gresource.xml  libresudoku.in  light.css  loading_screen.py  log_utils.py  main.py  meson.build  style-dark.css  style.css  styles.css  sudoku.gresource.xml  sudoku.in  sudoku_cell.py  sudokugame.gresource.xml  sudokugame.in  ui_helpers.py  window.blp  window.py  window.ui
src/base/: board_base.py  constants.py  debug_settings.py  generator_base.py  log_paths.py  manager_base.py  meson.build  preferences.py  preferences_manager.py  rules_base.py  runtime_profile.py  ui_helpers.py
src/gtk/: finished-overlay.blp  finished-page.blp  help-overlay.blp  help-overlay.ui  how-to-play-dialog.blp
src/screens/: about_dialog.py  difficulty_selection_dialog.py  finished_page.py  game_over_page.py  game_setup_dialog.py  help_dialog.py  help_overlay.py  loading_screen.py  meson.build  preferences_dialog.py  preferences_page.py  shortcuts_overlay.py  variant_selection_dialog.py
src/variants/classic_sudoku/: board.py  generator.py  manager.py  meson.build  preferences.py  rules.py  sudoku_cell.py  ui_helpers.py
src/variants/diagonal_sudoku/: board.py  generator.py  manager.py  meson.build  preferences.py  rules.py  sudoku_cell.py  ui_helpers.py
tests/: conftest.py  meson.build  test_auto_note_removal.py  test_board_interactions.py  test_board_state_roundtrip.py  test_classic_grid_construction.py  test_diagonal_mode_plumbing.py  test_fd_growth_shared_popover.py  test_generator_contract.py  test_logging_setup.py  test_logging_toggle.py  test_mistake_counter.py  test_pencil_conflicts.py  test_popover_lifecycle_regression.py  test_preferences_schema.py
