modulesubdir = join_paths(moduledir, 'screens')

services_sources = [
    'difficulty_selection_dialog.py',
    'finished_page.py',
    'help_dialog.py',
    'loading_screen.py',
    'variant_selection_dialog.py',
    'preferences_dialog.py',
    'preferences_page.py'
]

install_data(services_sources, install_dir: modulesubdir)