modulesubdir = join_paths(moduledir, 'screens')

services_sources = [
    'finished_page.py',
    'help_dialog.py',
    'shortcuts_overlay.py',
    'loading_screen.py',
    'preferences_dialog.py',
    'preferences_page.py',
    'game_setup_dialog.py'
]

install_data(services_sources, install_dir: modulesubdir)